# aeval-refactor

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  GRAMMAR_README.md  gdb_expr.py  gdb_gmp.py  jump_fcontext.gdb  lia_cfg.smt2  lia_cfg_rand.smt2  lia_cfg_trav.smt2  sample_cfg.smt2  trav_cfg.smt2  trav_cfg2.smt2
cmake/: FindZ3.cmake
gittools/: commit-versionbump.sh  pull.sh  push.sh
grammars/: sample_cfg.smt2  trav1.5_cfg.smt2  trav2_cfg.smt2  trav_cfg.smt2  traversal_cfg.smt2
include/ae/: AeValSolver.hpp  ExprSimpl.hpp  SMTUtils.hpp
include/deep/: BndExpl.hpp  DataLearner.hpp  Horn.hpp  RndLearner.hpp  RndLearnerV2.hpp  RndLearnerV3.hpp
include/expr/: ExprSimpl.hpp  SMTUtils.hpp
include/gram/: AllHeaders.hpp  CFGUtils.h  CFGUtils.hpp  Constraint.h  Constraint.hpp  CoroTrav.hpp  GramEnum.hpp  GramFac.hpp  Grammar.h  Grammar.hpp  GrammarTypes.hpp  NewTrav.hpp  PTSimpl.hpp  ParseTree.hpp  RndTrav.hpp  TravParams.hpp  TravPos.hpp  Traversal.hpp
include/sampl/: ArrCom.hpp  BoolCom.hpp  GramFac.hpp  LinCom.hpp  ParseTree.hpp  Sampl.hpp  SeedMiner.hpp  TravPos.hpp
include/sygus/: BaseSolver.hpp  EnumSolver.hpp  ExprEval.hpp  ExprNorm.hpp  PruningSolver.hpp  SISolver.hpp  SyGuSParams.hpp  SyGuSParser.yy  SyGuSSolver.hpp  (+1 more)
java/: CMakeLists.txt  TestParser.MF  TestParser.java
java/com/freqhorn/: Expr.java  ExprBoolVal.java  ExprIntVal.java  ExprOp.java  ExprRealVal.java  ExprSorts.java  ExprStringVal.java  ExprVal.java  Grammar.java  GrammarParser.java
jni/: CMakeLists.txt  ExprConverter.hpp  GrammarConverter.hpp  GrammarParser.hpp  LibJFreqhorn.cpp
test/: Dockerfile  build_buildah.sh  build_common.sh  build_docker.sh  constraint_cfg.smt2  run.sh  run_buildah.sh  run_docker.sh
tools/: CMakeLists.txt  DeepHorn.cpp  gram2chc.cpp  sygussolver.cpp  testparser.cpp
tools/aeval/: CMakeLists.txt
tools/bnd/: CMakeLists.txt
tools/deep/: CMakeLists.txt  DeepHorn.cpp
tools/sygus/: CMakeLists.txt  sygussolver.cpp
tools/utils/: generate_good.sh  manualtest.sh  prio.py  rollavg.sh  timeiters.sh  traversal.py  traversal_nested.py
(+68 files in other folders)
